<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sandbox</string>
    <string name="action_settings">Settings</string>
    <string name="connection_failed">通信に失敗しました</string>

    <!-- ホーム画面 -->
    <string name="home_welcome_head">Welcome!</string>
    <string name="home_welcome_message">Hello world!</string>
    <string name="home_description_head">概要</string>
    <string name="home_description_message">Androidアプリの実装サンプルです。詳細は各種リソースやコードにあるコメントを参照してください。</string>
    <string name="home_content_button_text">ボタンサンプル</string>
    <string name="home_content_button_message">Awesome click! X)</string>
    <string name="home_weather_button_text">天気を見る</string>

    <!-- 天気画面 -->
    <string name="weather_api_endpoint">http://weather.livedoor.com/forecast/webservice/json/v1?city=130010</string>
    <string name="weather_head">今日・明日の天気</string>

</resources>
