<!--
    レイアウトファイルには文字列と数値は直接書かないようにする
    @dimen, @string, @style 等のリソースにまとめていくと再利用性が高まり、
    アプリ全体でデザインや用語を統一しやすくなる

    理想はアプリ毎にデザインを用意して、それを全て@style化して各所で再利用すること
    ただし、慣れないうちからリソース化にこだわりすぎると手間がかかって面倒
    最初のうちは共通で利用したいと思ったものだけをリソース化するようにするといいだろう
    用意するのは面倒だが、2回目以降は @style の指定1つでデザインを出来るようになってかなり楽になる
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppActivity"
    android:id="@+id/container"
    android:orientation="vertical"
    tools:context="densetubu.android.sandbox.app.MainActivity"
    tools:ignore="MergeRootFrame"
    ><!-- 閉じ括弧を改行しておくと、後で要素を追加・コピペなどをする時に便利 -->

    <TextView
        style="@style/AppHeadTitle"
        android:text="@string/home_welcome_head"
        />

    <TextView
        style="@style/AppContentText"
        android:text="@string/home_welcome_message"
        android:textSize="@dimen/app_content_text_size"
        />

    <TextView style="@style/AppSpacer" />

    <TextView
        style="@style/AppHeadTitle"
        android:text="@string/home_description_head"
        />

    <TextView
        style="@style/AppContentText"
        android:text="@string/home_description_message"
        android:textSize="@dimen/app_content_text_size"
        />

    <TextView style="@style/AppSpacerLarge" />

    <Button
        style="@style/AppButtonBasic"
        android:id="@+id/activity_main_content_button"
        android:layout_gravity="center_horizontal"
        android:text="@string/home_content_button_text"
        />

    <TextView style="@style/AppSpacerLarge" />

    <Button
        style="@style/AppButtonBasic"
        android:id="@+id/activity_main_weather_button"
        android:layout_gravity="center_horizontal"
        android:text="@string/home_weather_button_text"
        />

</LinearLayout>